# PyTorch-StudioGAN

./: .gitignore  pyproject.toml
.dvc/: config
data/raw/: train.dvc
