[tool.poetry]
name = "pytorch-studiogan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
dvc = "^2.11.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
tqdm = "^4.64.0"
ninja = "^1.10.2"
h5py = "^3.7.0"
kornia = "^0.6.6"
matplotlib = "^3.5.2"
pandas = "^1.4.3"
sklearn = "^0.0"
scipy = "^1.9.0"
seaborn = "^0.11.2"
wandb = "^0.12.21"
PyYAML = "^6.0"
click = "^8.1.3"
requests = "^2.28.1"
pyspng = "^0.1.0"
imageio-ffmpeg = "^0.4.7"
timm = "^0.6.7"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
